syntax = "proto3";

package items;

service ItemsService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc DecreaseStock (DecreaseStockRequest) returns (DecreaseStockResponse) {}
}

// CreateProduct

message CreateItemsRequest {
  string name = 1;
  string sku = 2;
  int32 stock = 3;
  double price = 4;
}

message CreateItemsResp {
  int32 status = 1;
  repeated string error = 2;
  int32 id = 3;
}

// FindOne

message ItemType {
    int32 id = 1;
    string name = 2;
    string cuisine = 3;
}

message Items {
  int32 id = 1;
  string name = 2;
  ItemType type = 3;
  double price = 4;
}

message FindItemsRequest {
  int32 restaurant_id = 1;
}

message FindItemsResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated Items response = 3;
}
